solved problem with header display on narrow mobile devices (less than 375px)

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -219,7 +219,7 @@ header {
 				display: flex;
 				flex-direction: column;
 				align-items: flex-end;
-				width: 70%;
+				width: 75%;
 				top: 37%;
 				right: 1.5em;
 				font-family: 'Plus Jakarta Sans', sans-serif;
@@ -232,7 +232,7 @@ header {
 				z-index: 1;
 
 				&-head {
-					font-size: 3.5rem;
+					font-size: 3.4rem;
 
 					&2 {
 						right: 0;
